<resources>
    <string name="app_name">Waiver Library</string>
    <string name="read_and_sign_at_the_bottom">Read and sign at the bottom</string>
    <string name="subscribe_message">Check to receive promotions, updates, discounts, and news by e-mail from Yombu and Yombu\'s partners. You can unsubscribe at any time.</string>
    <string name="electronic_signature_consent">Electronic Signature Consent*</string>
    <string name="electronic_signature_message">By checking here, you are consenting to the use of your electronic signature in lieu of an original signature on paper. You have the right to request that you sign a paper copy instead. By checking here, you are waiving that right. After consent, you may, upon written request to us, obtain a paper copy of an electronic record. No fee will be charged for such copy and no special hardware or software is required to view it. Your agreement to use an electronic signature with us for any documents will continue until such time as you notify us in writing that you no longer wish to use an electronic signature. There is no penalty for withdrawing your consent. You should always make sure that we have a current email address in order to contact you regarding any changes, if necessary.</string>
    <string name="i_agree_to">I agree to</string>
    <string name="yombus_terms_amp_conditions"><![CDATA[Yombu\'s Terms & Conditions]]></string>
    <string name="please_sign_below">Please Sign Below</string>
    <string name="clear">Clear</string>
    <string name="ACCEPT">ACCEPT</string>
    <string name="unable_to_load_waiver_please_try_again">Unable to load Waiver. Try again or ask a staff member for help!</string>
    <string name="RETRY">RETRY</string>
    <string name="BACK">BACK</string>
    <string name="network_timeout">Network Timeout</string>
    <string name="check_connection_message">Please check your connection and try again.</string>
    <string name="error">Error</string>
    <string name="try_again">Try Again</string>
    <string name="RESTART">RESTART</string>
    <string name="scroll_down">Scroll Down</string>
    <string name="processing">Processing…</string>
</resources>