<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yombu.waiverlibrary.ActivityWaiver">

    <RelativeLayout
        android:id="@+id/rlWaiver"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlWaiverContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/YombuTextCopyLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/read_and_sign_at_the_bottom"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvTitle"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/parentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llWaiverContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <CheckBox
                        android:id="@+id/cbReceiveEmailNotification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:checked="true"
                        android:focusable="false"
                        android:text="@string/subscribe_message"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:id="@+id/llWaiverCheckboxOptions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp">

                        <CheckBox
                            android:id="@+id/cbElectronicSignatureConsent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:focusable="false"
                            android:text="@string/electronic_signature_consent"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/etElectronicSignatureConsentLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:focusable="false"
                            app:errorEnabled="true">

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvElectronicSignatureConsent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingStart="32dp"
                        android:paddingEnd="32dp"
                        android:text="@string/electronic_signature_message"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp">

                        <CheckBox
                            android:id="@+id/cbYombuTermsOfUse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:checked="true"
                            android:focusable="false"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvAgree"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="@string/i_agree_to"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvTermsOfUse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="8dp"
                            android:text="@string/yombus_terms_amp_conditions"
                            android:textColor="@color/YombuBlue"
                            android:textSize="16sp" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/etYombuTermsOfUseLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:focusable="false"
                            app:errorEnabled="true">

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp">

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="22sp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvInstructions"
                                style="@style/YombuHeader"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/please_sign_below"
                                android:textAlignment="center"
                                android:textColor="@color/LightGrey"
                                android:textSize="20sp" />

                            <RelativeLayout
                                android:id="@+id/rlSignature"
                                android:layout_width="match_parent"
                                android:layout_height="180dp"
                                android:layout_marginLeft="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginRight="8dp"
                                android:background="@drawable/background_border_disabled"
                                android:focusable="false" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <android.support.design.widget.TextInputLayout
                                    android:id="@+id/etSignatureLayout"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginEnd="8dp"
                                    android:layout_weight="1"
                                    android:focusable="false"
                                    app:errorEnabled="true">

                                </android.support.design.widget.TextInputLayout>

                                <TextView
                                    android:id="@+id/tvClear"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end"
                                    android:focusable="false"
                                    android:padding="8dp"
                                    android:text="@string/clear"
                                    android:textColor="@color/LightGrey"
                                    android:textSize="12sp" />

                            </LinearLayout>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:focusable="false"
                            android:padding="8dp"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnAccept"
                        style="@style/YombuBorderlessAffirmativeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:focusable="false"
                        android:padding="30dp"
                        android:text="@string/ACCEPT" />

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlInternetProblem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:padding="16dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/unable_to_load_waiver_please_try_again"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnRetry"
                    style="@style/YombuNegativeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:focusable="false"
                    android:text="@string/RETRY" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnDecline"
            style="@style/YombuBorderlessNegativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="#FAFAFA"
            android:focusable="false"
            android:text="@string/BACK" />

        <android.support.design.button.MaterialButton
            android:id="@+id/scrollButton"
            style="@style/FABLikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="32dp"
            android:text="@string/scroll_down"
            app:icon="@drawable/ic_arrow_downward" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlProcessing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvProcessingInstructions"
            style="@style/YombuTextCopyLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:paddingBottom="30dp"
            android:text="@string/processing" />

        <ImageView
            android:id="@+id/animatedProcessingView"
            android:layout_width="250dp" android:contentDescription="TODO" 
            android:layout_height="250dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</LinearLayout>